advertisement divs refactored on frontend , unnecesary entities refactored to enum types (there was idea to have possibility updating them in admin panel but for application and db performance this idea was dropped) , paralax hover photos removed for mobile devices (they were lagging and their effect doesnt matter on mobile), liquibase changelog reduced unnecesary script injections and refactored to less files still a lot of work need to be done , thats all for today =)